# Cengine

./: CMakeLists.txt  README  cengine_test.cpp  conanbuildinfo.cmake
include/: Cengine.h
include/cengine/: Cengine.h
include/cengine/core/: Debug.h  LifeCycle.h  Window.h
include/cengine/core/data/: Vector2.h  Vector3.h
include/cengine/scene/: Exceptions.h  Scene.h
include/cengine/scene/actors/: Actor.h
include/cengine/scene/components/: Component.h  Render.h  Transform.h  Writer.h
include/core/: CEngine.h  Exceptions.h  Window.h
include/core/actors/: Actor.h
include/core/actors/components/: Component.h
include/core/components/: Component.h
include/core/components/render/: Render.h
include/core/world/: Vector2.h  Vector3.h
src/: Cengine.cpp
src/cengine/: Cengine.cpp
src/cengine/cengineBase/: Object.cpp  Transform.cpp  Window.cpp  engineErrors.cpp
src/cengine/cengineBase/include/: Object.h  Transform.h  Window.h  engineErrors.h
src/cengine/components/: Component.h
src/cengine/components/drawable/: Drawable.cpp  Vector2.cpp  Vertex.cpp
src/cengine/components/drawable/include/: Drawable.h  Vector2.h  Vertex.h
src/cengine/components/drawable/shaders/: fragment_shader.frag  vertex_shader.vert
src/cengine/core/: Object.cpp  Transform.cpp  Window.cpp  engineErrors.cpp
src/cengine/include/: Cengine.h
src/core/: Exceptions.cpp  Window.cpp
src/core/components/render/: Render.cpp
test/: actor_test.cpp
